// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-html > should convert v-html to innerHTML 1`] = `
"import { setHtmlBinding as _setHtmlBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx, $props, $emit, $attrs, $slots) {
  const n0 = t0()
  _setHtmlBinding(n0, () => _ctx.code)
  return n0
}"
`;

exports[`v-html > should raise error and ignore children when v-html is present 1`] = `
"import { setHtmlBinding as _setHtmlBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setHtmlBinding(n0, () => _ctx.test)
  return n0
}"
`;

exports[`v-html > should raise error if has no expression 1`] = `
"import { setHtml as _setHtml, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setHtml(n0, "")
  return n0
}"
`;

exports[`v-html > work with component 1`] = `
"import { createAssetComponent as _createAssetComponent, setBlockHtmlBinding as _setBlockHtmlBinding } from 'vue';

export function render(_ctx) {
  const n0 = _createAssetComponent("Comp", null, null, true)
  _setBlockHtmlBinding(n0, () => _ctx.foo)
  return n0
}"
`;

exports[`v-html > work with dynamic component 1`] = `
"import { createDynamicComponent as _createDynamicComponent, setBlockHtmlBinding as _setBlockHtmlBinding } from 'vue';

export function render(_ctx) {
  const n0 = _createDynamicComponent(() => (_ctx.Comp), null, null, true)
  _setBlockHtmlBinding(n0, () => _ctx.foo)
  return n0
}"
`;

exports[`v-html > wrap component object literal expression in binding getter 1`] = `
"import { createAssetComponent as _createAssetComponent, setBlockHtmlBinding as _setBlockHtmlBinding } from 'vue';

export function render(_ctx) {
  const n0 = _createAssetComponent("Comp", null, null, true)
  _setBlockHtmlBinding(n0, () => ({ foo: _ctx.bar }))
  return n0
}"
`;

exports[`v-html > wrap object literal expression in binding getter 1`] = `
"import { setHtmlBinding as _setHtmlBinding, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n0 = t0()
  _setHtmlBinding(n0, () => ({ foo: _ctx.bar }))
  return n0
}"
`;
